- unit and definition reference materials show up properly on the right side of the panel - trying to fix the bug with mathjax rendering certain texts and overlaps them

--- a/css/MsmDisplay.css
+++ b/css/MsmDisplay.css
@@ -494,3 +494,46 @@ span.extrainfoname
     color: black;
     font-weight: bold;
 }
+.refcontent
+{
+    font-size:14px;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 10px;
+    margin-top: 0px;
+}
+
+.refcontent .title
+{
+    /*    overflow: hidden;*/
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: large;
+}
+
+.proof
+{
+    font-size:14px;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 10px;
+    margin-top: 0px;
+}
+
+.proof .title
+{
+    /*    overflow: hidden;*/
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    letter-spacing: 5px;
+    font-weight: bold;
+    font-size: large;
+}
